--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,1 +1,53 @@
-@import "bootstrap";
+
+
+.tl { 
+	position: absolute; 
+	top: 0; 
+	left: 0; 
+	right: 50%; 
+	bottom: 50%; 
+	background: none; 
+	border:solid #000; 
+	border-width: 0 2px 2px 0; 
+}
+
+.tr { 
+	position: absolute; 
+	top: 0; 
+	left: 50%; 
+	right: 0; 
+	bottom: 50%; 
+	background: none; 
+	border: solid #000; 
+	border-width: 0 0 2px 0; 
+
+}
+
+.bl { 
+	position: absolute; 
+	top: 50%; 
+	left: 0; 
+	right: 50%; 
+	bottom: 0; 
+	background: none; 
+	border:solid #000; 
+	border-width: 0 2px 0 0; 
+}
+
+.br {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	right: 0;
+	bottom: 0;
+	background: none;
+}
+
+#inner {
+    width: 80%;
+    height: 80%;
+    position:absolute;
+    top: 10%;
+    left: 10%;
+    overflow:scroll;
+}
