--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,12 @@
 <html>
   <head>
     <title>GTasks Extension</title>
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <link rel="apple-touch-icon" href="iphon_tetris_icon.png"/>
+    <link rel="apple-touch-startup-image" href="startup.png" />
+    <link rel="stylesheet" href="tetris.css" type="text/css" media="screen, mobile" title="main" charset="utf-8">
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
@@ -10,16 +16,7 @@
     <![endif]-->
   </head>
   <body>
-    <header class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <nav style="padding-bottom:5px">
-          	<li><%= link_to "Re-Sync", '#', :class => "btn btn-large btn-primary" %></li>
-          </nav>
-        </div>
-      </div>
-    </header>
-    <div class="container">
+    <div class="container" style="width:100%">
       <%= yield %>
     </div>
   </body>
