--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,32 @@
-<div class="center hero-unit" style="text-align: center">
 <table>
-  <tr>
-    <td id="quadrant_1">Quad 1</td>
-    <td id="quadrant_2">Quad 2</td>
-  </tr>
-  <tr>
-    <td id="quadrant_3">Quad 3</td>
-    <td id="quadrant_4">Quad 4</td>
-  </tr>
-</table>
+<div class="tl">
+	<div id="inner">
+		<div>Task 1</div>
+		<div>Task 1</div>
+		<div>Task 1</div>
+		<div>Task 1</div>
+		<div>Task 1</div>
+		<div>Task 1</div>
+		<div>Task 1</div>
+		<div>Task 1</div>
+		<div>Task 1</div>
+		<div>Task 1</div>
+	</div>
 </div>
+</div>
+<div class="tr">
+	<div id="inner">
+
+	</div>
+</div>
+<div class="bl">
+	<div id="inner">
+
+	</div>
+</div>
+<div class="br">
+	<div id="inner">
+
+	</div>
+</div>
+</table>
