google auth test

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,6 @@
+<button id="authorize-button">Authorize</button>
 <table>
+
 <div class="tl">
 	<div id="inner">
 		<div>Task 1</div>
@@ -16,7 +18,7 @@
 </div>
 <div class="tr">
 	<div id="inner">
-
+		<div id="results"></div>
 	</div>
 </div>
 <div class="bl">
