--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -47,7 +47,18 @@
     width: 80%;
     height: 80%;
     position:absolute;
+    -moz-box-shadow: 5px 5px 2px #888;
+	-webkit-box-shadow: 5px 5px 2px #888;
+	box-shadow: 5px 5px 2px #888;
     top: 10%;
     left: 10%;
     overflow:scroll;
+}
+
+p2{
+	
+}
+
+p3{
+	
 }
