--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,7 +2,7 @@
 <table>
 
 <div class="tl">
-	<p>Important and has no deadline</p>
+	<span>Important and has no deadline</span>
 	<div id="inner">
 		<div>Task 1</div>
 		<div>Task 1</div>
@@ -18,19 +18,19 @@
 </div>
 </div>
 <div class="tr">
-	<p>Important and has a deadline</p>
+	<span>Important and has a deadline</span>
 	<div id="inner">
 		<div id="results"></div>
 	</div>
 </div>
 <div class="bl">
-	<p>Not important and has no deadline</p>
+	<span>Not important and has no deadline</span>
 	<div id="inner">
 
 	</div>
 </div>
 <div class="br">
-	<p>Not important and has a deadline</p>
+	<span>Not important and has a deadline</span>
 	<div id="inner">
 
 	</div>
