--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -56,6 +56,14 @@
 span{
 	width:100%;
 	text-align:center;
+	align:center;
+	display:block;
+	padding: 5px;
+	background-color:light-gray;
+}
+
+h1{
+	
 }
 
 p2{
