--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -65,8 +65,7 @@ span{
 
 h1{
 	font-size:1em;
-	padding: 5px;
-	padding-bottom:2px;
+	padding: 2px;
 	margin: 1px 1px 1px 1px;
 	
 }
@@ -76,11 +75,9 @@ p2{
 }
 
 .line-separator{
-
+width:80%;
 height:1px;
-
 background:#717171;
-
 border-bottom:1px solid #313030;
 
 }
