--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -59,20 +59,20 @@ span{
 	text-align:center;
 	align:center;
 	display:block;
-	padding: 5px;
-	background-color:;
-	font-size:1.2em;
+	padding: 1px;
+	font-size:0.8em;
 }
 
 h1{
-	font-size:1em;
-	padding: 2px;
+	font-size:0.7em;
+	padding: 0px;
 	margin: 1px 1px 1px 1px;
 	
 }
 
 p2{
-	font-size:0.7em;
+	font-size:0.5em;
+	margin:0;
 }
 
 .line-separator{
@@ -85,5 +85,6 @@ border-bottom:1px solid #313030;
 }
 
 p3{
-	font-size:0.7em;
+	font-size:0.5em;
+	margin:0;
 }
