--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,9 +2,9 @@
 <table>
 
 <div class="tl">
-	<span>Important and has no deadline</span>
+	<span>Important no deadline</span>
 	<div id="inner">
-		<div>Task 1</div>
+		<div><div class='task'><h1>task.title<br /></h1><p2>Notes: "+task.notes+"<br /></p2><p3>Due: "+task.due+"<br /></p3></div></div><div class='line-separator'></div>
 		<div>Task 1</div>
 		<div>Task 1</div>
 		<div>Task 1</div>
@@ -18,19 +18,19 @@
 </div>
 </div>
 <div class="tr">
-	<span>Important and has a deadline</span>
+	<span>Important with deadline</span>
 	<div id="inner">
 		<div id="results"></div>
 	</div>
 </div>
 <div class="bl">
-	<span>Not important and has no deadline</span>
+	<span>Not important no deadline</span>
 	<div id="inner">
 
 	</div>
 </div>
 <div class="br">
-	<span>Not important and has a deadline</span>
+	<span>Not important with deadline</span>
 	<div id="inner">
 
 	</div>
