--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -64,15 +64,19 @@ span{
 }
 
 h1{
-	font-size:0.7em;
+	font-size:0.9em;
 	padding: 0px;
-	margin: 1px 1px 1px 1px;
-	
+	margin: 0px;
+	-webkit-margin-before: 0px;
+	-webkit-margin-after: 0px;
+	-webkit-margin-start: 0px;
+	-webkit-margin-end: 0px;
 }
 
 p2{
-	font-size:0.5em;
+	font-size:0.6em;
 	margin:0;
+	padding:0;
 }
 
 .line-separator{
@@ -85,6 +89,7 @@ border-bottom:1px solid #313030;
 }
 
 p3{
-	font-size:0.5em;
+	font-size:0.6em;
 	margin:0;
+	padding:0;
 }
