--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<button id="authorize-button">Authorize</button>
+<button style='display:none;' id="authorize-button">Authorize</button>
 <table>
 
 <div class="tl">
