--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -93,3 +93,21 @@ p3{
 	margin:0;
 	padding:0;
 }
+
+
+
+
+
+
+
+
+
+
+body {
+    font-size: 9px !important;
+}
+
+.cont {
+    height:100px !important;
+    overflow: scroll;
+}
