--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,15 +20,14 @@
     -->
   </head>
   <body>
-    <div class="container">
+    <div class="">
       <div class="navbar navbar-fixed-top">
         <div class="navbar-inner">
-            <div class="container">
-                <button class="btn btn-primary btn-large" type="submit" id="login">Login</button>
-                <button class="btn btn-primary btn-large" type="submit" id="re-sync">Re-Sync</button>
-            </div>
+          <button class="btn btn-primary btn-mid" type="submit" style="width: 40%;margin-left:35px;" id="login">Login</button>
+          <button class="btn btn-primary btn-mid" type="submit" style="width: 40%" id="re-sync">Re-Sync</button>
         </div>
       </div>
+      <br /><br /><br />
       <%= yield %>
     </div>
   </body>
