--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     -->
   </head>
   <body>
-    <div class="">
+    <div>
       <div class="navbar navbar-fixed-top">
         <div class="navbar-inner">
           <button class="btn btn-primary btn-mid" type="submit" style="width: 40%;margin-left:35px;" id="login">Login</button>
